# cedar-python

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  mkdocs.yml  pyproject.toml  versions.json
.github/actions/env-setup/: action.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: SUMMARY.md  index.md  tests.md
docs/reference/: SUMMARY.md  authorizer.md  entities.md  entity.md  entity_uid.md  is_authorized.md  is_authorized_batch.md  policy.md  policy_set.md  request.md  response.md  schema.md  utilities.md
e2e/: test_corpus.py
example/: app.py  context.json  entities.json  policies.cedar  schema.cedar
python/cedar/: __init__.py  _lib.pyi
rust/: authorizer.rs  entities.rs  entity.rs  entity_uid.rs  errors.rs  format_policies.rs  lib.rs  policy.rs  policy_set.rs  request.rs  response.rs  schema.rs
tests/: test_effect.py  test_entity.py  test_entity_uid.py  test_lib.py  test_policy.py
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.1-dev/: 404.html  index.html  sitemap.xml
v0.0.1-dev/SUMMARY/: index.html
v0.0.1-dev/reference/SUMMARY/: index.html
v0.0.1-dev/reference/authorizer/: index.html
v0.0.1-dev/reference/entities/: index.html
v0.0.1-dev/reference/entity/: index.html
v0.0.1-dev/reference/entity_uid/: index.html
v0.0.1-dev/reference/is_authorized/: index.html
v0.0.1-dev/reference/is_authorized_batch/: index.html
v0.0.1-dev/reference/policy/: index.html
v0.0.1-dev/reference/policy_set/: index.html
v0.0.1-dev/reference/request/: index.html
v0.0.1-dev/reference/response/: index.html
v0.0.1-dev/reference/schema/: index.html
v0.0.1-dev/reference/utilities/: index.html
v0.0.1-dev/search/: search_index.json
v0.0.1-dev/tests/: index.html
v0.0.1/SUMMARY/: index.html
v0.0.1/reference/SUMMARY/: index.html
v0.0.1/reference/authorizer/: index.html
v0.0.1/reference/entities/: index.html
v0.0.1/reference/entity/: index.html
v0.0.1/reference/entity_uid/: index.html
v0.0.1/reference/is_authorized/: index.html
v0.0.1/reference/is_authorized_batch/: index.html
v0.0.1/reference/policy/: index.html
v0.0.1/reference/policy_set/: index.html
v0.0.1/reference/request/: index.html
v0.0.1/reference/response/: index.html
v0.0.1/reference/schema/: index.html
v0.0.1/reference/utilities/: index.html
v0.0.1/tests/: index.html
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2/SUMMARY/: index.html
v0.0.2/reference/SUMMARY/: index.html
v0.0.2/reference/authorizer/: index.html
v0.0.2/reference/entities/: index.html
v0.0.2/reference/entity/: index.html
v0.0.2/reference/entity_uid/: index.html
v0.0.2/reference/is_authorized/: index.html
v0.0.2/reference/is_authorized_batch/: index.html
v0.0.2/reference/policy/: index.html
v0.0.2/reference/policy_set/: index.html
v0.0.2/reference/request/: index.html
v0.0.2/reference/response/: index.html
v0.0.2/reference/schema/: index.html
v0.0.2/reference/utilities/: index.html
v0.0.2/tests/: index.html
v0.0.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.3/SUMMARY/: index.html
v0.0.3/reference/SUMMARY/: index.html
v0.0.3/reference/authorizer/: index.html
v0.0.3/reference/entities/: index.html
v0.0.3/reference/entity/: index.html
v0.0.3/reference/entity_uid/: index.html
v0.0.3/reference/is_authorized/: index.html
v0.0.3/reference/is_authorized_batch/: index.html
v0.0.3/reference/policy/: index.html
v0.0.3/reference/policy_set/: index.html
v0.0.3/reference/request/: index.html
v0.0.3/reference/response/: index.html
v0.0.3/reference/schema/: index.html
v0.0.3/reference/utilities/: index.html
v0.0.3/tests/: index.html
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/SUMMARY/: index.html
v0.0.4/reference/SUMMARY/: index.html
v0.0.4/reference/authorizer/: index.html
v0.0.4/reference/entities/: index.html
v0.0.4/reference/entity/: index.html
v0.0.4/reference/entity_uid/: index.html
v0.0.4/reference/is_authorized/: index.html
v0.0.4/reference/is_authorized_batch/: index.html
v0.0.4/reference/policy/: index.html
v0.0.4/reference/policy_set/: index.html
v0.0.4/reference/request/: index.html
v0.0.4/reference/response/: index.html
v0.0.4/reference/schema/: index.html
v0.0.4/reference/utilities/: index.html
v0.0.4/search/: search_index.json
v0.0.4/tests/: index.html
