[package]
name = "cedar-python"
version = "0.1.0"
edition = "2021"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"           # private module to be nested into Python package
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = " 0.23.5", features = ["extension-module"] }
cedar-policy = { version = "4.3.3" }
cedar-policy-formatter = { version = "4.3.3" }
serde = { version = "1.0.0", features = ["derive", "rc"] }
serde_json = "1.0.0"
anyhow = "1.0.97"
pythonize = "0.23.0"
